--- a/_output.yml
+++ b/_output.yml
@@ -3,6 +3,6 @@ bookdown::gitbook:
   config:
     toc:
       before: |
-        <li><a href="./">g15 Final Project</a></li>
+        <li><a href="./">GR5702 group 15 Final Project</a></li>
       after: |
         <li><a href="https://github.com/rstudio/bookdown" target="blank">Published with bookdown</a></li>
